# seims

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/data/: cdmx.csv
src/db/: main.rs  mod.rs  postal_code.rs
src/domain/: address.rs  location.rs  mod.rs  postal_code.rs  postal_codes.rs  product.rs  stock.rs
